--- a/main.css
+++ b/main.css
@@ -2,9 +2,18 @@ nav {
     height: 100px;
     box-shadow: 0px .125rem .25rem rgba(black, .075);
 }
-body {
+body, hero {
     font-family: 'Urbanist', sans-serif;
 }
+
+.letter-spacing {
+    letter-spacing: 0.25em;
+}
+
+.section-height {
+    height: 490px;
+}
+
 .section-title {
     font-size: 2.5rem;
     color: #28a745; /* Verde semelhante ao da imagem */
