--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@ nav {
     height: 100px;
     box-shadow: 0px .125rem .25rem rgba(black, .075);
 }
-body, hero {
+body, .display-4 {
     font-family: 'Urbanist', sans-serif;
 }
 
@@ -16,7 +16,7 @@ body, hero {
 
 .section-title {
     font-size: 2.5rem;
-    color: #28a745; /* Verde semelhante ao da imagem */
+    color: #28a745;
     font-weight: bold;
     text-align: center;
     margin-bottom: 50px;
@@ -25,7 +25,7 @@ body, hero {
     margin-bottom: 50px;
 }
 .section-heading {
-    color: #28a745; /* Verde */
+    color: #28a745;
     font-weight: bold;
     font-size: 0.9rem;
     letter-spacing: 2px;
