--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,21 @@ body, .display-4 {
     line-height: 1.6;
 }
 
+.footer-container {
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-logo {
+    margin-bottom: 1rem;
+}
+
+.footer-text {
+    margin: 0;
+    color: white;
+}
 @media (max-width: 991.98px) {
     .navbar-collapse {
         background-color: white;
